# links

./: COPYING.txt  Containerfile  app.py  pyproject.toml  schema.sql  views.py
.github/workflows/: docker.yml
app/: __init__.py  api.py  views.py
static/: main.css
templates/: _lists.html  base.html  index.html  list.html
